tests/errors/spawnNotSendStruct.milo
// @error: cannot send 'u' of type 'Unsafe' across threads

from "std/thread" import {
    Thread
}

struct Unsafe {
    p: *u8,
}

fn main(): i32 {
    unsafe {
        let u = Unsafe {
            p: 0 as *u8
        }
        let t = Thread.spawn(move(): void => {
            print("bad: ", u.p as i64)
        }
        )!
        t.join()!
    }
    return 0
}
